syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/AnkitNayan83/houseBank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string access_token = 2;
    google.protobuf.Timestamp access_token_expired_at = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp refresh_token_expired_at = 5;
    string session_id = 6;
}

